# esp32s3-voice-asistan

./: README.md
components/hardware_driver/boards/esp32s3-devkit-c/: bsp_board.c
examples/en_speech_commands_recognition/: CMakeLists.txt  make_word.py
examples/en_speech_commands_recognition/main/: CMakeLists.txt  main.c
examples/en_speech_commands_recognition/main/components/buzzer/: CMakeLists.txt
examples/en_speech_commands_recognition/main/components/buzzer/include/: buzzer.h
examples/en_speech_commands_recognition/main/components/buzzer/src/: buzzer.c
